--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!--todo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Släktföreningen Breitholtz</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header></header>
+
+    <nav>
+        <div id="burger">
+            <div id="burger_line_1"></div>
+            <div id="burger_line_2"></div>
+            <div id="burger_line_3"></div>
+        </div>
+    </nav>
+
+    <div id="grid_wrapper_start">
+
+        <section id="welcome_text">
+            <h2>Välkommen</h2>
+            <p>Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
+        </section>
+
+        <section id="actual_updates">
+            <h2>Aktuellt</h2>
+            <p>Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
+            <img src="" alt="">
+            <p>Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.
+            </p>
+            <img src="" alt="">
+        </section>
+
+        <footer></footer>
+    </div>
+    
+</body>
+</html>
