--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
-
-    <nav>
-        <div id="burger">
-            <div id="burger_line_1"></div>
-            <div id="burger_line_2"></div>
-            <div id="burger_line_3"></div>
-        </div>
-    </nav>
-
     <div id="grid_wrapper_start">
+        <header> 
+            <img id="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+            <h1>Breitholtz</h1>
+        </header>
 
-        <section id="welcome_text">
+        <nav>
+            <div id="burger">
+                <div id="burger_line_1"></div>
+                <div id="burger_line_2"></div>
+                <div id="burger_line_3"></div>
+            </div>
+        </nav>
+
+    
+
+        <section id="welcome_text_section">
             <h2>Välkommen</h2>
-            <p>Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
+            <p class="start_p">Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
         </section>
 
-        <section id="actual_updates">
+        <section id="actual_updates_section">
             <h2>Aktuellt</h2>
-            <p>Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
-            <img src="" alt="">
-            <p>Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.
+            <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
+            <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
+            <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.
             </p>
-            <img src="" alt="">
+            <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
         </section>
 
         <footer></footer>
