--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="grid_wrapper_start">
-        <header> 
-            <img id="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
-            <h1>Breitholtz</h1>
-        </header>
+    <header> 
+        <img id="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+        <h1>Breitholtz</h1>
+    </header>
 
-        <nav>
-            <div id="burger">
-                <div id="burger_line_1"></div>
-                <div id="burger_line_2"></div>
-                <div id="burger_line_3"></div>
-            </div>
-        </nav>
-
+    <nav>
+        <div id="burger">
+            <div id="burger_line_1"></div>
+            <div id="burger_line_2"></div>
+            <div id="burger_line_3"></div>
+        </div>
+    </nav>
     
+    <div id="grid_wrapper_start">
 
         <section id="welcome_text_section">
-            <h2>Välkommen</h2>
+            <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
             <p class="start_p">Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
         </section>
 
