--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
             <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
             <h1>Breitholtz</h1>
         </div>
-        <div id="scroll"></div>
-            <ul id="link_list">
-                <li><a href="index.html">Släktföreningen</a></li>
-                <li><a href="#">Släkthistoria</a></li>
-                <li><a href="#">Släktträd</a></li>
-                <li><a href="styrelse.html">Styrelse</a></li>
-            </ul>
-        </div>
+        <ul id="link_list">
+            <li><a href="index.html">Släktföreningen</a></li>
+            <li><a href="#">Släkthistoria</a></li>
+            <li><a href="#">Släktträd</a></li>
+            <li><a href="styrelse.html">Styrelse</a></li>
+        </ul>
 
         <div id="burger">
             <div id="burger_line_1"></div>               
@@ -34,20 +32,20 @@
         <section id="welcome_text_section">
             <div id="img_area"></div>
             <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
-            <p class="start_p">Släktföreningen Breitholtz sedan 1950</p>
+            <h4 class="start_p">Släktföreningen Breitholtz sedan 1950</h4>
         </section>
 
         <section id="actual_updates_section">
             <h2>Aktuellt</h2>
             <article class="update_article">
                 <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
-                <h3 class="update_date">Datum</h3>
+                <h4 class="update_date">Datum</h4>
                 <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
                 <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
             </article>
             <article class="update_article">
                 <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
-                <h3 class="update_date">Datum</h3>
+                <h4 class="update_date">Datum</h4>
                 <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 1)</h2>
                 <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
             </article>
@@ -55,7 +53,7 @@
 
         <section id="förening_information">
             <img src="img/Slaktfoto2010.jpg" alt="Släktfoto 2010" id="slaktfoto">
-            <article class="information_article">
+            <article id="information_article">
                 <h2>Läs om släktföreningen</h2>
                 <p>Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
             </article>
