--- a/styrelse.html
+++ b/styrelse.html
@@ -10,24 +10,24 @@
 <body>
     <nav class="nav_other">
         <div id="logo">
-            <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
-            <h1>Breitholtz</h1>
+            <a href="index.html"><img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen"></a>
+            <h1 id="other_h1">Breitholtz</h1>
         </div>
         <ul id="link_list">
-            <li><a href="index.html">Släktföreningen</a></li>
-            <li><a href="#">Släkthistoria</a></li>
-            <li><a href="#">Släktträd</a></li>
+            <li><a href="slakt_forening.html">Släktföreningen</a></li>
+            <li><a href="slakt_historia.html">Släkthistoria</a></li>
+            <li><a href="slakt_trad.html">Släktträd</a></li>
             <li><a href="styrelse.html">Styrelse</a></li>
         </ul>
 
         <div id="burger">
-            <div id="burger_line_1"></div>               
-            <div id="burger_line_2"></div>
-            <div id="burger_line_3"></div>
+            <div class=burger_other id="burger_line_1"></div>               
+            <div class=burger_other id="burger_line_2"></div>
+            <div class=burger_other id="burger_line_3"></div>
         </div>
     </nav>
 
-    <div id="wrapper_styrelse">
+    <div id="wrapper">
 
         <section id="styrelse_section">
             <h2>Styrelse</h2>
