--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <nav id="nav">
         <div id="logo">
-            <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+            <a href="index.html"><img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen"></a>
             <h1>Breitholtz</h1>
         </div>
         <ul id="link_list">
-            <li><a href="index.html">Släktföreningen</a></li>
-            <li><a href="#">Släkthistoria</a></li>
-            <li><a href="#">Släktträd</a></li>
-            <li><a href="styrelse.html">Styrelse</a></li>
+            <li><a href="slakt_forening.html">Släktföreningen</a></li>
+            <li><a href="slakt_historia.html">Släkthistoria</a></li>
+            <li><a href="slakt_trad.html">Släktträd</a></li>
+            <li><a id="styrelse_link" href="styrelse.html">Styrelse</a></li>
         </ul>
 
         <div id="burger">
-            <div id="burger_line_1"></div>               
-            <div id="burger_line_2"></div>
-            <div id="burger_line_3"></div>
+            <div class="burger_index" id="burger_line_1"></div>               
+            <div class="burger_index" id="burger_line_2"></div>
+            <div class="burger_index" id="burger_line_3"></div>
         </div>
     </nav>
 
@@ -31,8 +31,10 @@
 
         <section id="welcome_text_section">
             <div id="img_area"></div>
-            <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
-            <h4 class="start_p">Släktföreningen Breitholtz sedan 1950</h4>
+            <article id="welcome_text_article">
+                <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
+                <h4 class="start_p">Släktföreningen Breitholtz sedan 1950</h4>
+            </article>
         </section>
 
         <section id="actual_updates_section">
