--- a/slakt_historia.html
+++ b/slakt_historia.html
@@ -4,18 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Släktföreningen Breitholtz</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section id="actual_updates_section">
-        <h2>Aktuellt</h2>
-        <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
-        <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
-        <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.
-        </p>
-        <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
-    </section>
-    
+    <nav class="nav_other">
+        <div id="logo">
+            <a href="index.html"><img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen"></a>
+            <h1 id="other_h1">Breitholtz</h1>
+        </div>
+        <ul id="link_list">
+            <li><a href="slakt_forening.html">Släktföreningen</a></li>
+            <li><a href="slakt_historia.html">Släkthistoria</a></li>
+            <li><a href="slakt_trad.html">Släktträd</a></li>
+            <li><a href="styrelse.html">Styrelse</a></li>
+        </ul>
+
+        <div id="burger">
+            <div class=burger_other id="burger_line_1"></div>               
+            <div class=burger_other id="burger_line_2"></div>
+            <div class=burger_other id="burger_line_3"></div>
+        </div>
+    </nav>
+    <div id="grid_wrapper_slakthistoria">  
+        <section id="slakt_historia_section">
+            <h2 id="slakt_historia_rubric">Släkthistorien</h2>
+            <p>Ätten Breitholtz är en svensk adlig ätt, som enligt Sveriges adelskalender består av f.n. omkring 235 bärare av namnet – män, kvinnor och barn – boende i Sverige, Finland, USA och Storbritannien. En släktförening bildades 1950.</p>
+            <p>Stamfadern generalmajoren Claes Breitholtz (1620-1706) kom över från Reval (Tallinn) i Estland till Stockholm 1637, då han var ung hovman i tjänst hos fältherren greve Jacob De la Gardie på palatset Makalös. Efter en tid som chef för greve Magnus Gabriel De la Gardies hovförvaltning övergick han till en bana som militär, stred som ryttarofficer med Karl X Gustaf i kriget i Polen 1655-1660, då han avancerade till överste. I Karl XI:s krig mot Danmark blev han efter slaget vid Strömstad 1676 generalmajor och underbefälhavare för armén i Västsverige.</p>
+            <p>Men redan 1650 hade Claes Breitholtz fått svenskt adelsskap, då drottning Christina signerade ett adelsbrev för honom. Han introducerades samma år på Sveriges Riddarhus. Härigenom fick ätten ställning som s.k. självständigt statsrättsligt subjekt med egen representation vid Sveriges Riksdag, en ordning som varade i hela 215 år tills ståndsriksdagens upplösning 1865. Huvudmännen förde ättens talan vid riksdagarna. Claes var således förste huvudman. För närvarande är herr Jonas Breitholtz (född 1961) ättens huvudman, den 12:e i ordningen.</p>
+            <p>Vid mitten av 1700-talet framväxte ättens fyra nu levande grenar. Från kaptenen Evert Breitholtz (1688-1762) härstammar huvudmannagrenen. Från deras yngste son, sergeanten Adolf Breitholtz (1753-1813), härstammar två yngre grenar med Finland som fädernesland. Den tredje yngre grenen, Stjärnevikgrenen, härstammar från Claës Didrik Breitholtz (1712-1783), överstelöjtnanten vid amiralitetet.</p>
+            <p>Bland framstående eller namnkunniga personer inom ätten kan förutom stamfadern Claes nämnas de båda cheferna för artilleriet, Claes Josef (1788-1834), en av förgrundsgestalterna till det svenska artilleriets snabba utveckling under 1800-talet och sonen generallöjtnanten Edvard Julius (1830-1912), som införde mausergeväret i svenska armén. Kofferdikaptenen Claes (1743-1812) var den förste som förde ett finländskt handelsfartyg – Concordia af Jacobsstad - till Ostindien. Hans brorson var Berndt Julius (1786-1863), den ende officer som vägrade överlämna sin värja till ryssarna vid Sveaborgs kapitulation 1808. Den dagbok hans förde i rysk fångenskap publicerades i Personhistorisk tidskrift 1902. Efter freden återvände han i svensk tjänst och avancerade till kapten vid Värmlands regemente. Hans sägenomspunna personlighet har skildrats i böcker av värmlandsskildraren Linus Brodin. Selma Lagerlöf hade honom till förebild i skildringarna av överste Beerencreutz och kapten Berg, välkända karaktärer i Gösta Berlings saga. Andra framstående släktmedlemmar är litteraturprofessorn Lennart (1909-1997), världspresidenten för Rotary International Ernst (1905-1984), fotografen Björn G Breitholtz (f. 1938), representerad vid Museum of Modern Art i New York. Bland kvinnorna bör nämnas Margareta Ödla (c-1624-1980), den adlades hustru och ättens stammoder, som gav namn till stamgodset Margreteholm i Västergötland, och Catharina Mariana Breitholtz (1748-1812), som genom sitt giftermål kom att bli en av ätten Hammarskiölds stammödrar.</p>
+            <p>Ättens äldre historia finns skildrad i ”Ätten Breitholtz från hansatid till stormaktstid”, författad av Anders Breitholtz (1998). Den adlade Claes härstammade från en inflytelserik hanseatisk köpmans- och rådssläkt Breetholt (Bretholt, Bredholt etc) från Reval. Den inkom 1421 från Visby med Marquard II Breetholt (-1421-1476), som var köpman inom tyska hansan, verkade som borgmästare i Reval under en lång följd av år, bannlystes av påven i en arvstvist men blev löst från det efter ett par år. Han slutade sina dagar som munk vid Birgittaklostret, då han grundade en by som sedermera uppkallades efter honom – Muuga öster om Tallinn. Hans bror Wolter (-1428-1481) var köpman i Lübeck, där han på 1450-talet var med om att grunda en av de första bankerna, en växelbank som ägde bestånd i sex år. Han var en av de borgare som ledde uppförandet av stadsporten Holstentor. Andra inflytelserika hanseater var revalborgmästaren Marquard IV även kallad Marcus (-1494-1525-) deltog i riksdagsbeslutet 1524, varigenom Estland övergick till den lutherska läran. Jasper (-1521-1566) hade en framträdande roll i förhandlingarna med Danmark och Sverige, som fick till följd att Estland 1561 kom under svensk överhöghet.</p>
+            <p>Ättens tidigaste urkund är en gravsten (nr 143) från 1313 i Visby domkyrka över en Hermannus Bredhult. Ätten räknades tidigast som nordisk. Stamfadern inkom sannolikt till Visby omkring 1240, från någon ort Bredholt i Danmark eller Bredhult i Västsverige, efter vilken härkomstort han uppkallades. Från Visby förgrenade sig ätten på 1400-talet till Reval, Stockholm och Lübeck. Den nu levande ätten härstammar från Revalgrenen.</p>
+            
+            <p><i>Anders Breitholtz</i></p>
+        </section>
+
+        <footer>
+            <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+        </footer>
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
