--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
 
         <section id="actual_updates_section">
             <h2>Aktuellt</h2>
-            <article class="update_article">
-                <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
-                <h4 class="update_date">Datum</h4>
-                <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
-                <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
-            </article>
-            <article class="update_article">
-                <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
-                <h4 class="update_date">Datum</h4>
-                <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 1)</h2>
-                <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
-            </article>
+            <div id="update_flex_change">
+                <article class="update_article">
+                    <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
+                    <h4 class="update_date">Datum</h4>
+                    <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
+                    <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
+                </article>
+                <article class="update_article">
+                    <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
+                    <h4 class="update_date">Datum</h4>
+                    <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 1)</h2>
+                    <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
+                </article>
+            </div>
         </section>
 
         <section id="förening_information">
