--- a/slakt_forening.html
+++ b/slakt_forening.html
@@ -29,14 +29,14 @@
 
     <div id="grid_wrapper_forening">
         <section id="section_forening">
-            <h2>Släktföreningen</h2>
-            <p>Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition finns denna hemsida med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
-            <h2>Medlemsskap</h2>
-            <p>Medlemsskap i släktföreningen kan enligt stadgarna sökas av den som tillhör ätten eller är barn till kvinnlig ättemedlem. Medlemsavgiften är för närvarande 100 kr per person och år. För livstidsmedlemskap görs en inbetalning av 20 årsavgifter. Inbetalning görs till föreningens bankgiro 5038-0310.</p>
-            <h2>Stipendier</h2>
-            <p>Släktföreningen har instiftat ett stipendium som är möjligt att sökas av medlemmar oavsett ålder. Inriktningen på stipendiet är att göra något möjligt att prova och lära sig nya saker. Det kan till exempel vara ett extra stöd vid studier utomlands eller att efter flera år i ett yrke omskola sig. Resultatet ska sedan redovisas antingen skriftligt så att det kan delas med medlemmarna, eller presenteras på nästkommande släktmöte. Ansökan ska var styrelsen till handa senast 2023-03-31 och innehålla motivering, önskat belopp och hur resultatet redovisas.</p>
-            <h2>Släktträffar</h2>
-            <p>Släktföreningen arrangerar släktmöten var femte år. Det senaste hölls den 10 september 2021 på Riddarhuset och nästa möte är bokat till den 23 maj 2025. Tidigare släktmöten har kombinerats med utflykter till platser med anknytning till släkten, bland annat i Uppland, Södermanland, Östergötland och Småland samt Estland. Mellan släktmöten arrangeras i mån av intresse mindre träffar och studieresor till platser med släktanknytning.</p>
+            <h2 class="non_center_forening">Släktföreningen</h2>
+            <p class="non_center_forening">Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition finns denna hemsida med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
+            <h2 class="non_center_forening">Medlemsskap</h2>
+            <p class="non_center_forening">Medlemsskap i släktföreningen kan enligt stadgarna sökas av den som tillhör ätten eller är barn till kvinnlig ättemedlem. Medlemsavgiften är för närvarande 100 kr per person och år. För livstidsmedlemskap görs en inbetalning av 20 årsavgifter. Inbetalning görs till föreningens bankgiro 5038-0310.</p>
+            <h2 class="non_center_forening">Stipendier</h2>
+            <p class="non_center_forening">Släktföreningen har instiftat ett stipendium som är möjligt att sökas av medlemmar oavsett ålder. Inriktningen på stipendiet är att göra något möjligt att prova och lära sig nya saker. Det kan till exempel vara ett extra stöd vid studier utomlands eller att efter flera år i ett yrke omskola sig. Resultatet ska sedan redovisas antingen skriftligt så att det kan delas med medlemmarna, eller presenteras på nästkommande släktmöte. Ansökan ska var styrelsen till handa senast 2023-03-31 och innehålla motivering, önskat belopp och hur resultatet redovisas.</p>
+            <h2 class="non_center_forening">Släktträffar</h2>
+            <p class="non_center_forening">Släktföreningen arrangerar släktmöten var femte år. Det senaste hölls den 10 september 2021 på Riddarhuset och nästa möte är bokat till den 23 maj 2025. Tidigare släktmöten har kombinerats med utflykter till platser med anknytning till släkten, bland annat i Uppland, Södermanland, Östergötland och Småland samt Estland. Mellan släktmöten arrangeras i mån av intresse mindre träffar och studieresor till platser med släktanknytning.</p>
         </section>
             
         <section id="forening_img1_section">
