--- a/styrelse.html
+++ b/styrelse.html
@@ -27,12 +27,11 @@
         </div>
     </nav>
 
-    <div id="wrapper">
-
-        <section id="styrelse_section">
-            <h2>Styrelse</h2>
-            <h3>Detta är den aktuella styrelsen för Släktföreningen Breitholtz</h3>
-        </section>
+    <section id="styrelse_section">
+        <h2>Styrelse</h2>
+        <h3>Detta är den aktuella styrelsen för Släktföreningen Breitholtz</h3>
+    </section>
+    <div class="wrapper">
 
         <section class="board_member_card">
             <img class="member_img" src="" alt="">
@@ -60,7 +59,8 @@
                 <a class="mail_link" href = "mailto: claes.breitholtz@telia.com">claes.breitholtz@telia.com</a>
             </article>
         </section>
-            
+    </div>
+    <div class="wrapper">     
         <section class="board_member_card">
             <img class="member_img" src="" alt="">
             <article class="member_info">
@@ -86,15 +86,12 @@
                 <h4>Carl Johan Breitholtz</h4>
                 <a class="mail_link" href = "mailto: calle.breitholtz@gmail.com">calle.breitholtz@gmail.com</a>
             </article>
-        </section>
-
-        <footer>
-            <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
-        </footer>
-        
+        </section>   
     </div>
 
-
+    <footer>
+        <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
