--- a/slakt_trad.html
+++ b/slakt_trad.html
@@ -26,22 +26,23 @@
             <div class=burger_other id="burger_line_3"></div>
         </div>
     </nav>
-    <section id="besok_slaktrad_section">
-        <div class="button">
-            <h3><a id="button_text" href="http://breitholtz.org/data/" target="_blank">Besök släktträdet</a></h3>
-        </div>
-    </section>
+    <div id="wrapper_trad">
+        <section id="besok_slaktrad_section">
+            <div class="button">
+                <h3><a id="button_text" href="http://breitholtz.org/data/" target="_blank">Besök släktträdet</a></h3>
+            </div>
+        </section>
 
-    <section id="slakttrad_info_sectinon">
-        <h2>Släktträd</h2>
-        <p>Släktträdet utgår från överstelöjtnanten Magnus Anders Breitholtz. Från denne karolin som dog 1721 härstammar alla nu levande ättemedlemmar. Av legala skäl – personuppgiftslagen – finns inga persondata för nu levande personer. Levande barn till avlidna personer anges dock med namn som son/dotter till sådan person. Släktträdet gör inte anspråk på att vara komplett. I takt med att rättelser och kompletteringar anmäls kommer uppdatering att ske.</p>
-        <h2>Några förklaringar</h2>
-        <p>I listen till vänster finns registrets samtliga personer i bokstavsordning. Klickar man på ett namn kommer man direkt till vederbörande person. I personakten (området till höger) kan man klicka sig uppåt eller nedåt till föräldrar eller barn samt till maka/make. Den vänstra listen kan växlas från ”personer” till ”platser”. I det senare alternativet sorteras personerna efter de platser som de har haft någon anknytning till, födelse, död, boende etc. Ett kors före namnet betyder att personen i fråga inte har några nu levande ättemedlemmar. Bokstavskoden före namnet ger uppgift om antal generationer efter stamfadern och vilken släktgren vederbörande hör till. (se sparat förklaring)</p>
-        <h2>Källor</h2>
-        <p>Uppgifterna kommer om inte annat anges från Elgenstiernas ättartavlor, Adelskalendrar av olika årgångar och släktföreningens eget arkivmaterial. Fotografierna kommer i huvudsak från släktföreningens fotoarkiv, vars stomme skapades av stiftssekreteraren Gustaf Breitholtz på 1950-talet.</p>
-        <p>Lycka till med bläddrandet bland ätte- och släktmedlemmar. Synpunkter, kommentarer och rättelser tas tacksamt emot av claes.breitholtz@gmail.com som är släktföreningens tillfällige ordförande.</p>
-    </section>
-
+        <section id="slakttrad_info_sectinon">
+            <h2>Släktträd</h2>
+            <p>Släktträdet utgår från överstelöjtnanten Magnus Anders Breitholtz. Från denne karolin som dog 1721 härstammar alla nu levande ättemedlemmar. Av legala skäl – personuppgiftslagen – finns inga persondata för nu levande personer. Levande barn till avlidna personer anges dock med namn som son/dotter till sådan person. Släktträdet gör inte anspråk på att vara komplett. I takt med att rättelser och kompletteringar anmäls kommer uppdatering att ske.</p>
+            <h2>Några förklaringar</h2>
+            <p>I listen till vänster finns registrets samtliga personer i bokstavsordning. Klickar man på ett namn kommer man direkt till vederbörande person. I personakten (området till höger) kan man klicka sig uppåt eller nedåt till föräldrar eller barn samt till maka/make. Den vänstra listen kan växlas från ”personer” till ”platser”. I det senare alternativet sorteras personerna efter de platser som de har haft någon anknytning till, födelse, död, boende etc. Ett kors före namnet betyder att personen i fråga inte har några nu levande ättemedlemmar. Bokstavskoden före namnet ger uppgift om antal generationer efter stamfadern och vilken släktgren vederbörande hör till. (se sparat förklaring)</p>
+            <h2>Källor</h2>
+            <p>Uppgifterna kommer om inte annat anges från Elgenstiernas ättartavlor, Adelskalendrar av olika årgångar och släktföreningens eget arkivmaterial. Fotografierna kommer i huvudsak från släktföreningens fotoarkiv, vars stomme skapades av stiftssekreteraren Gustaf Breitholtz på 1950-talet.</p>
+            <p>Lycka till med bläddrandet bland ätte- och släktmedlemmar. Synpunkter, kommentarer och rättelser tas tacksamt emot av claes.breitholtz@gmail.com som är släktföreningens tillfällige ordförande.</p>
+        </section>
+    </div>
     <footer>
         <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
     </footer>
