--- a/slakt_trad.html
+++ b/slakt_trad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 <body>
     <nav class="nav_other">
         <div id="logo">
-            <a href="index.html"><img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen"></a>
+            <a href="index.html"><img class="img_vapen" src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen"></a>
             <h1 id="other_h1">Breitholtz</h1>
         </div>
         <ul id="link_list">
@@ -44,7 +44,7 @@
         </section>
     </div>
     <footer>
-        <img class="img_vapen"src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
+        <img class="img_vapen" src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
     </footer>
 
     <script src="js/script.js"></script>
