Förbättringsarbete (inte helt klar)

--- a/slakt_forening.html
+++ b/slakt_forening.html
@@ -17,7 +17,6 @@
             <li><a href="slakt_forening.html">Släktföreningen</a></li>
             <li><a href="slakt_historia.html">Släkthistoria</a></li>
             <li><a href="slakt_trad.html">Släktträd</a></li>
-            <li><a href="styrelse.html">Styrelse</a></li>
         </ul>
 
         <div id="burger">
@@ -28,28 +27,91 @@
     </nav>
 
     <div id="grid_wrapper_forening">
-        <section id="section_forening">
-            <h2 class="non_center_forening">Släktföreningen</h2>
-            <p class="non_center_forening">Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition finns denna hemsida med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
-            <h2 class="non_center_forening">Medlemsskap</h2>
-            <p class="non_center_forening">Medlemsskap i släktföreningen kan enligt stadgarna sökas av den som tillhör ätten eller är barn till kvinnlig ättemedlem. Medlemsavgiften är för närvarande 100 kr per person och år. För livstidsmedlemskap görs en inbetalning av 20 årsavgifter. Inbetalning görs till föreningens bankgiro 5038-0310.</p>
-            <h2 class="non_center_forening">Stipendier</h2>
-            <p class="non_center_forening">Släktföreningen har instiftat ett stipendium som är möjligt att sökas av medlemmar oavsett ålder. Inriktningen på stipendiet är att göra något möjligt att prova och lära sig nya saker. Det kan till exempel vara ett extra stöd vid studier utomlands eller att efter flera år i ett yrke omskola sig. Resultatet ska sedan redovisas antingen skriftligt så att det kan delas med medlemmarna, eller presenteras på nästkommande släktmöte. Ansökan ska var styrelsen till handa senast 2023-03-31 och innehålla motivering, önskat belopp och hur resultatet redovisas.</p>
-            <h2 class="non_center_forening">Släktträffar</h2>
-            <p class="non_center_forening">Släktföreningen arrangerar släktmöten var femte år. Det senaste hölls den 10 september 2021 på Riddarhuset och nästa möte är bokat till den 23 maj 2025. Tidigare släktmöten har kombinerats med utflykter till platser med anknytning till släkten, bland annat i Uppland, Södermanland, Östergötland och Småland samt Estland. Mellan släktmöten arrangeras i mån av intresse mindre träffar och studieresor till platser med släktanknytning.</p>
-        </section>
+       <section id="slakt_forening_section1">
+           <h2 id="h2_forening">Medlemskap</h2>
+           <p id="pone_forening">Bli medlem för att ta del av våra förmåner.</p>
+           <p id="ptwo_forening">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam nisi reprehenderit unde corrupti sapiente perferendis quibusdam itaque dolores veniam debitis.</p>
+           <a href="#section_forening_info_2" id="medlems_knapp">Medlemsinformation</a>
+       </section>
+
+       <section id="slakt_forening_section2">
+            <img src="img/bzslaktm2005.jpeg" alt="Släktbild" class="forening_img">
+       </section>
             
-        <section id="forening_img1_section">
-            <h2 id="forening_h2">Bilder på släktföreningen</h2>
-            <img src="img/Slaktfoto2010.jpg" alt="Släktbild" class="forening_img">
+       <section id="section_forening_info_1" class="section_forening_info">
+            <h3>Släktföreningen</h3>
+            <p class="small_paragraph_forening">Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition finns denna hemsida med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
+       </section>
+       <section id="section_forening_info_2" class="section_forening_info">
+            <h3>Medlemsskap</h3>
+            <p class="small_paragraph_forening">Medlemsskap i släktföreningen kan enligt stadgarna sökas av den som tillhör ätten eller är barn till kvinnlig ättemedlem. Medlemsavgiften är för närvarande 100 kr per person och år. För livstidsmedlemskap görs en inbetalning av 20 årsavgifter. Inbetalning görs till föreningens bankgiro 5038-0310.</p>
+       </section>
+       <section id="section_forening_info_3" class="section_forening_info">
+            <h3>Stipendier</h3>
+            <p class="small_paragraph_forening">Släktföreningen har instiftat ett stipendium som är möjligt att sökas av medlemmar oavsett ålder. Inriktningen på stipendiet är att göra något möjligt att prova och lära sig nya saker. Det kan till exempel vara ett extra stöd vid studier utomlands eller att efter flera år i ett yrke omskola sig. Resultatet ska sedan redovisas antingen skriftligt så att det kan delas med medlemmarna, eller presenteras på nästkommande släktmöte. Ansökan ska var styrelsen till handa senast 2023-03-31 och innehålla motivering, önskat belopp och hur resultatet redovisas.</p>
+       </section>
+       <section id="section_forening_info_4" class="section_forening_info">
+            <h3>Släktträffar</h3>
+            <p class="small_paragraph_forening">Släktföreningen arrangerar släktmöten var femte år. Det senaste hölls den 10 september 2021 på Riddarhuset och nästa möte är bokat till den 23 maj 2025. Tidigare släktmöten har kombinerats med utflykter till platser med anknytning till släkten, bland annat i Uppland, Södermanland, Östergötland och Småland samt Estland. Mellan släktmöten arrangeras i mån av intresse mindre träffar och studieresor till platser med släktanknytning.</p>
+       </section>
+
+       <section id="heading_styrelse">
+            <h2>Styrelse</h2>
+       </section>
+
+       <section id="section_styrelse_bild">
+            <img id="forening_img1" src="img/slaktfoto2010.jpg" alt="Släktbild" class="forening_img">
+            <img src="img/mbzmem.jpeg" alt="Släktbild" class="forening_img">
+       </section>
+
+        <section id="section_medlem_1"class="board_member_card">
+            <img class="member_img" src="img/claes.jpg" alt="Claes Breitholtz">
+            <article class="member_info">
+                <h3>Ordförande</h3>
+                <h4>Claes Breitholtz</h4>
+                <a class="mail_link" href = "mailto:claes.e.breitholtz@gmail.com">claes.e.breitholtz@gmail.com</a>
+            </article>
         </section>
-        <section id="forening_img2_section">
-            <img src="img/MBzMem.jpeg" alt="Släktbild" class="forening_img">
+        <section id="section_medlem_2" class="board_member_card">
+            <img class="member_img" src="img/madeleine.jpg" alt="Madeleine Breitholtz">
+            <article class="member_info">
+                <h3>Kassör</h3>
+                <h4>Madeleine Breitholtz</h4>
+                <a class="mail_link" href = "mailto:madeleine@)breitholtz.bz">madeleine@breitholtz.bz</a>
+            </article>
         </section>
-        <section id="forening_img3_section">
-            <img src="img/BzSlaktm2005.jpeg" alt="Släktbild" class="forening_img">
+        <section id="section_medlem_3" class="board_member_card">
+            <img class="member_img" src="img/claes2.jpg" alt="Claës Breitholtz">
+            <article class="member_info">
+                <h3>Ledamot</h3>
+                <h4>Claës Breitholtz</h4>
+                <a class="mail_link" href = "mailto:claes.breitholtz@telia.com">claes.breitholtz@telia.com</a>
+            </article>
         </section>
-        
+        <section id="section_medlem_4" class="board_member_card">
+            <img class="member_img" src="img/anna.jpg" alt="Anna Breitholtz Monsen">
+            <article class="member_info">
+                <h3>Ledamot</h3>
+                <h4>Anna Breitholtz Monsén</h4>
+                <a class="mail_link" href = "mailto:a.breitholtz@gmail.com">a.breitholtz@gmail.com</a>
+            </article>
+        </section>
+        <section id="section_medlem_5" class="board_member_card">
+            <img class="member_img" src="img/adam.jpeg" alt="Adam Breitholtz">
+            <article class="member_info">
+                <h3>Ledamot</h3>
+                <h4>Adam Breitholtz</h4>
+                <a class="mail_link" href = "mailto:cadbreitholtz@protonmail.com">cadbreitholtz@protonmail.com</a>
+            </article>
+        </section>
+        <section id="section_medlem_6" class="board_member_card">
+            <img class="member_img" src="img/cjbz.jpeg" alt="Carl Johan Breitholtz">
+            <article class="member_info">
+                <h3>Ledamot</h3>
+                <h4>Carl Johan Breitholtz</h4>
+                <a class="mail_link" href = "mailto:calle.breitholtz@gmail.com">calle.breitholtz@gmail.com</a>
+            </article>
+        </section>
 
         <footer>
             <img class="img_vapen" src="img/breitholtz_vapen1.png" alt="Breitholtz Släkt Vapen">
