--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <li><a href="slakt_forening.html">Släktföreningen</a></li>
             <li><a href="slakt_historia.html">Släkthistoria</a></li>
             <li><a href="slakt_trad.html">Släktträd</a></li>
-            <li><a id="styrelse_link" href="styrelse.html">Styrelse</a></li>
         </ul>
 
         <div id="burger">
@@ -29,35 +28,41 @@
 
     <div id="grid_wrapper_start">
 
-        <section id="welcome_text_section">
+        <section id="index_section1">
             <div id="img_area"></div>
             <article id="welcome_text_article">
                 <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
-                <h4 class="start_p">Släktföreningen Breitholtz sedan 1950</h4>
+                <h4 class="home_p">Släktföreningen Breitholtz sedan 1950</h4>
             </article>
         </section>
 
-        <section id="actual_updates_section">
+        <section id="index_section2">
             <h2>Aktuellt</h2>
             <div id="update_flex_change">
                 <article class="update_article">
-                    <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)">
-                    <h4 class="update_date">2023-04-02</h4>
-                    <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
-                    <p class="start_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
+                    <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)" class="aktuell_img">
+                    <h3 class="update_date">2023-04-02</h3>
+                    <h4 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
+                    <p class="home_p">Ett nytryck av del 2 av Anders Breitholtz bok, Ätten Breitholtz , en släkthistoria genom sju sekler , är planerat och ny information kommer att publiceras här.</p>
                 </article>
                 <article class="update_article">
-                    <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)">
-                    <h4 class="update_date">2023-04-02</h4>
-                    <h2 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 1)</h2>
-                    <p class="start_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
+                    <img src="img/breitholtz_bild2.jfif" alt="Bild på Anders Breitholtz bok (del 1)" class="aktuell_img">
+                    <h3 class="update_date">2023-04-02</h4>
+                    <h4 class="update_rubric">Nytrycke av boken ätten Breitholtz (del 2)</h2>
+                    <p class="home_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
+                </article>
+                <article class="update_article">
+                    <img src="img/breitholtz_bild2.jfif" alt="TODO" class="aktuell_img">
+                    <h3 class="update_date">2023-05-02</h3>
+                    <h4 class="update_rubric">Nyhet</h4>
+                    <p class="home_p" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati hic id labore est praesentium, veritatis ex voluptate repellat sit quasi.</p>
                 </article>
             </div>
         </section>
 
-        <section id="förening_information">
-            <img src="img/Slaktfoto2010.jpg" alt="Släktfoto 2010" id="slaktfoto">
-            <article id="information_article">
+        <section id="index_section3">
+            <img src="img/Slaktfoto2010.jpg" alt="Släktfoto 2010" class="sido_bild">
+            <article class="sido_article">
                 <h2>Läs om släktföreningen</h2>
                 <p>Släktföreningen Breitholtz bildades 1950 med syfte att stärka familjebanden mellan släktens medlemmar, vårda släktminnen och stödja forskning och information om släktens historia. Som ett led i denna ambition kommer vår hemsida att successivt byggas ut med material i skrift och bild som kan vara av intresse för ättens medlemmar och alla andra som av olika anledningar vill fördjupa sig i vår släkts historia och tradition.</p>
             </article>
