--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <section id="index_section1">
             <div id="img_area"></div>
             <article id="welcome_text_article">
-                <h2>Välkommen till Breitholtz släktförenings hemsida!</h2>
-                <h4 class="home_p">Släktföreningen Breitholtz sedan 1950</h4>
+                <h2 class="one_higher_golden">Välkommen till Breitholtz släktförenings hemsida!</h2>
+                <h3 id="home_p">Släktföreningen Breitholtz sedan 1950</h3>
             </article>
         </section>
 
         <section id="index_section2">
-            <h2>Aktuellt</h2>
+            <h2 class="one_higher_golden">Aktuellt</h2>
             <div id="update_flex_change">
                 <article class="update_article">
                     <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)" class="aktuell_img">
@@ -52,7 +52,7 @@
                     <p class="home_p" >Det finns tyvärr inte exemplar kvar av första delen som behandlar släktens epok inom Hansan i Visby och Reval och inget nytryck är för närvarande planerat.</p>
                 </article>
                 <article class="update_article">
-                    <img src="img/breitholtz_bild2.jfif" alt="TODO" class="aktuell_img">
+                    <img src="img/breitholtz_historia.jpg" alt="Bild" class="aktuell_img">
                     <h3 class="update_date">2023-05-02</h3>
                     <h4 class="update_rubric">Nyhet</h4>
                     <p class="home_p" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati hic id labore est praesentium, veritatis ex voluptate repellat sit quasi.</p>
