--- a/slakt_trad.html
+++ b/slakt_trad.html
@@ -28,7 +28,7 @@
     <div id="wrapper_trad">
         <section id="slakttrad_section1">
             <h2 class="hIII_trad">Släkten Breitholtz Släkträd</h2>
-            <h3 id="hII_trad">Besök och läs om släktträdet här</h3>
+            <h3 id="hII_trad" class="one_higher_golden">Besök och läs om släktträdet här</h3>
             <article class="button">
                 <h4><a id="button_text" href="http://breitholtz.org/data/" target="_blank">Besök släktträdet</a></h4>
             </article>
@@ -36,7 +36,7 @@
 
         <section id="slakttrad_section2">
             <article class="sido_article">
-                <h2  id="slakt_historia_rubric">Släktträd</h2>
+                <h2 id="slakt_historia_rubric" class="one_higher_golden">Släktträd</h2>
                 <p>Släktträdet utgår från överstelöjtnanten Magnus Anders Breitholtz. Från denne karolin som dog 1721 härstammar alla nu levande ättemedlemmar. Av legala skäl – personuppgiftslagen – finns inga persondata för nu levande personer. Levande barn till avlidna personer anges dock med namn som son/dotter till sådan person. Släktträdet gör inte anspråk på att vara komplett. I takt med att rättelser och kompletteringar anmäls kommer uppdatering att ske.</p>
             </article>
             <article class="center_container">
@@ -46,11 +46,11 @@
 
         <section id="slakttrad_section3">
             <article class="sido_article">   
-                <h2>Några förklaringar</h2>
+                <h2 class="one_higher_golden">Några förklaringar</h2>
                 <p>I listan nedanför finns registrets samtliga personer i bokstavsordning. Klickar man på ett namn kommer man direkt till vederbörande person. I personakten (området till höger) kan man klicka sig uppåt eller nedåt till föräldrar eller barn samt till maka/make. Den vänstra listen kan växlas från ”personer” till ”platser”. I det senare alternativet sorteras personerna efter de platser som de har haft någon anknytning till, födelse, död, boende etc. Ett kors före namnet betyder att personen i fråga inte har några nu levande ättemedlemmar. Bokstavskoden före namnet ger uppgift om antal generationer efter stamfadern och vilken släktgren vederbörande hör till. (se sparat förklaring)</p>
             </article>
             <article class="sido_article">
-                <h2>Källor</h2>
+                <h2 class="one_higher_golden">Källor</h2>
                 <p>Uppgifterna kommer om inte annat anges från Elgenstiernas ättartavlor, Adelskalendrar av olika årgångar och släktföreningens eget arkivmaterial. Fotografierna kommer i huvudsak från släktföreningens fotoarkiv, vars stomme skapades av stiftssekreteraren Gustaf Breitholtz på 1950-talet.</p>
                 <p>Lycka till med bläddrandet bland ätte- och släktmedlemmar. Synpunkter, kommentarer och rättelser tas tacksamt emot av claes.breitholtz@gmail.com som är släktföreningens tillfällige ordförande.</p>
             </article>
