--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <section id="index_section2">
             <h2 class="one_higher_golden">Aktuellt</h2>
-            <div id="update_flex_change">
+            <section id="update_flex_change">
                 <article class="update_article">
                     <img src="img/breitholtz_bild1.jfif" alt="Bild på Anders Breitholtz bok (del 2)" class="aktuell_img">
                     <h3 class="update_date">2023-04-02</h3>
@@ -57,7 +57,7 @@
                     <h4 class="update_rubric">Nyhet</h4>
                     <p class="home_p" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati hic id labore est praesentium, veritatis ex voluptate repellat sit quasi.</p>
                 </article>
-            </div>
+            </section>
         </section>
 
         <section id="index_section3">
